--- a/src/index.css
+++ b/src/index.css
@@ -495,7 +495,7 @@ i {
 
 .product-image {
   width: 100%;
-  height: 200px; /* Adjust as per your design */
+  height: 200px; 
   object-fit: cover;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
